# keenwa

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: memo_basic_benchmark.rs  memo_rel_scalar_benchmark.rs  optimizer_benchmark.rs
examples/: basic.rs  sql.rs
src/: datatypes.rs  dump.rs  error.rs  lib.rs  memo.rs  meta.rs  optimizer.rs  testing.rs  util.rs
src/catalog/: mod.rs  mutable.rs
src/cost/: mod.rs  simple.rs
src/error/: macros.rs  mod.rs
src/memo/: arc.rs  default_impl.rs  mod.rs  store.rs  testing.rs  tests.rs
src/memo/unsafe_impl/: arena.rs  mod.rs  store.rs
src/operators/: builder.rs  expr.rs  expressions.rs  format.rs  join.rs  logical.rs  mod.rs  operator_tree.rs  physical.rs  properties.rs
src/operators/builder/: aggregate.rs  mod.rs  projection.rs  scope.rs  subqueries.rs
src/operators/relational/: join.rs  logical.rs  mod.rs  physical.rs
src/operators/scalar/: aggregates.rs  expr.rs  exprs.rs  func.rs  funcs.rs  mod.rs  types.rs  value.rs
src/operators/statistics/: mod.rs  simple.rs
src/properties/: logical.rs  mod.rs  physical.rs  statistics.rs
src/properties/ordering/: derive.rs  mod.rs
src/properties/partitioning/: mod.rs
src/rules/: enforcers.rs  implementation.rs  mod.rs  pattern.rs  testing.rs  transformation.rs
src/rules/enforcers/: mod.rs  ordering.rs  partitioning.rs
src/rules/implementation/: aggregate.rs  index.rs  join.rs  mod.rs  set.rs
src/rules/rewrite/: filter_push_down.rs  mod.rs  (+2 more)
src/sql/: aggregate_tests.yaml  basic_tests.yaml  correlated_exists_tests.yaml  correlated_in_subquery_tests.yaml  cte_tests.yaml  expr_basic_tests.yaml  expr_case_tests.yaml  expr_interval_tests.yaml  exprs_tests.yaml  join_cross_tests.yaml  join_full_tests.yaml  join_inner_tests.yaml  join_left_tests.yaml  join_right_tests.yaml  joins_tests.yaml  mod.rs  set_operator_tests.yaml  subqueries_tests.yaml  window_aggregate_tests.yaml
src/statistics/: mod.rs  simple.rs
src/tests/: mod.rs
(+36 files in other folders)
