[package]
name = "keenwa"
version = "0.0.1"
edition = "2018"

[dependencies]
rand = "0.8.4"
log = "0.4.14"
itertools = "0.10.1"
triomphe = "0.1.5"

[dev-dependencies]
criterion = {version = "0.3.3"}
pretty_env_logger = "0.4.0"

[profile.bench]
opt-level=3

[features]
default=["default_memo"]
# Use default implementation of a memo data structure (enabled by default).
default_memo=[]
# Use implementation of a memo data structure that uses unsafe rust.
unsafe_memo=[]
# INTERNAL: Include documentation for both safe and unsafe implementations of memo data structure.
docs=[]

[[bench]]
name = "optimizer_benchmark"
harness = false

[[bench]]
name = "memo_basic_benchmark"
harness = false

[[bench]]
name = "memo_rel_scalar_benchmark"
harness = false