[package]
name = "keenwa"
version = "0.0.1"
edition = "2018"

[dependencies]
rand = "0.8.4"
log = "0.4.14"
itertools = "0.10.1"
triomphe = "0.1.5"
sqlparser = "0.16.0"
chrono = "0.4.19"

[dev-dependencies]
criterion = {version = "0.3.3"}
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[profile.bench]
opt-level=3

[[bench]]
name = "optimizer_benchmark"
harness = false

[[bench]]
name = "memo_basic_benchmark"
harness = false

[[bench]]
name = "memo_rel_scalar_benchmark"
harness = false