[package]
name = "keenwa"
version = "0.0.1"
edition = "2018"

[dependencies]
rand = "0.8.5"
log = "0.4.22"
itertools = "0.13.0"
triomphe = "0.1.13"
sqlparser = "0.45.0"
chrono = "0.4.38"
backtrace = "0.3.74"
ordered-float = "4.2.2"

[dev-dependencies]
criterion = { version = "0.3.3" }
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"

[profile.bench]
opt-level = 3

[[bench]]
name = "optimizer_benchmark"
harness = false

[[bench]]
name = "memo_basic_benchmark"
harness = false

[[bench]]
name = "memo_rel_scalar_benchmark"
harness = false